syntax = "proto3";
package messages;

import "poh.proto";
option go_package = "/proto";

message InitConnection {
    bytes Address = 1;
    string Type = 2;
}

message EntryWithBlockCount {
    bytes BlockCount = 1;
    poh.PohEntry Entry = 2;
}