syntax = "proto3";
package poh;

import "pack.proto";

option go_package = "/proto";

message PohHashData {
    bytes PreHash = 1;
    repeated bytes PackHashes = 2;
}

message PohEntry {
    uint64 NumHashes = 1;
    bytes Hash = 2;
    repeated pack.Pack Packs = 3;
}

message LeaderSchedule {
    bytes Seed = 1;
    bytes FromSlot = 2;
    bytes ToSlot = 3;
    map<string,bytes> Slots =4;
}   