syntax = "proto3";
package transaction;
import "account_state.proto";
option go_package = "/proto";

message Transaction {
  bytes Hash = 1;  // hash của transaction này
  bytes FromAddress = 2; // địa chỉ của account tạo transaction 
  bytes ToAddress = 3; // địa chỉ của account tạo transaction 
  bytes PubKey = 4; // pubkey của account tạo transaction
  bytes PendingUse = 5;  // số lượng pending mà user muốn thêm vào balance trước khi chuyển. Số tiền chuyển sẽ là PreviousData.Balance + PendingUser - Balance 
  bytes Balance = 6;  // số dư sau khi transaction này đươcj thực hiện
  bytes Amount = 7; // số tiền được chuyển
  bytes Fee = 8; // phí cho transaction này
  TransactionData Data = 9; // là data để gọi smart contract,
  Transaction DEPRECATED_PreviousTransaction = 10; // transaction trước đó của account tạo ra transaction này (trong này có hash rôi nên mình ko cần thêm field lasthash nữa, trong thông tin previous data  của previous data có thể để null hoặc chỉ cần có hash)
  bytes Sign = 11; // chữ ký bls được ký bằng private key của account tạo account trên hash của transaction
  bytes LastHash = 12; 
  bytes LastDeviceKey = 13; // hash last transaction deviceKey
  bytes NewDeviceKey = 14; // hash of hash for new deviceKey
}

message HashData {
  bytes FromAddress = 1; // địa chỉ của account tạo transaction 
  bytes ToAddress = 2; // địa chỉ của account tạo transaction 
  bytes PubKey = 3; // pubkey của account tạo transaction
  bytes PendingUse = 4;  // số lượng pending mà user muốn thêm vào balance trước khi chuyển. Số tiền chuyển sẽ là PreviousData.Balance + PendingUser - Balance 
  bytes Balance = 5;  // số dư sau khi transaction này đươcj thực hiện
  bytes Amount = 6; 
  bytes Fee = 7; 
  TransactionData Data = 8; // là data để gọi smart contract,
  bytes LastHash = 9; // hash cuar transaction trước đó
  bytes LastDeviceKey = 10; // hash cuar transaction trước đó
  bytes NewDeviceKey = 11; // hash cuar transaction trước đó
}

enum EXECUTE_TYPE {
    CALL = 0;
    DEPLOY = 1;
    CHANGE_COMMISSION = 2;
}

message TransactionData {
  EXECUTE_TYPE Type = 1;
  DeployData DeployData = 2;
  CallData  CallData = 3;
  repeated bytes RelatedAddresses = 4;
  account_state.SmartContractCommissionState ChangeCommissionData = 5;
}

message DeployData {
  bytes Code = 1;
  string StorageHost = 2;
}

enum FEETYPE {
    USER_CHARGE_FEE = 0;
    SMART_CONTRACT_CHARGE_FEE = 1;
}

message CallData {
  bytes Input  = 1; // 
  FEETYPE FeeType = 2; // 0:user,  1: smartContract
}

message Transactions {
  repeated Transaction Transactions = 1;
}

